<resources>
    <string name="app_name">100ms</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <string name="settings_name" translatable="false"> Settings</string>
    <string name="disconnect_call">Disconnect Call</string>
    <string name="missing_permissions_try_again">The application is missing permissions. It might not work correctly. Do you want to try again?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="switch_camera">Switch camera</string>
    <string name="toggle_mic">Toggle mic ON/OFF</string>
    <string name="toggle_video">Toggle video ON/OFF</string>
    <string name="instabug_token">83d22f7c2d84a1329e3384b53cffab30</string>
    <string name="token_generation_url">https://100ms-services.vercel.app/api/token/</string>


    <!-- Settings -->
    <string name="action_settings">Settings</string>
    <string name="video_settings">Video Settings</string>
    <string name="video_publish">Publish Video</string>
    <string name="video_codec">Video Codec</string>
    <string name="video_resolution">Resolution and FPS</string>
    <string name="video_frame_rate">Video framerate</string>
    <string name="video_maxbitrate">Video Max Bitrate</string>


    <string name="audio_settings">Audio Settings</string>
    <string name="audio_publish">Publish Audio</string>
    <string name="audio_maxbitrate">Audio Max Bitrate</string>
    <string name="title_activity_brytecam_settings">BrytecamSettingsActivity</string>
</resources>